<resources>
    <string name="app_name">MAHUNT (proyecto)</string>

    <string name="BTNLOGIN">LOGIN</string>
    <string name="BTNREGISTRO">REGISTRO</string>
    <string name="correoEt">Correo Electronico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="fechaTxt">Fecha</string>
    <string name="Registrar">Registrar</string>

    <string name="correoLogin">Correo Electronico</string>
    <string name="passLogin">Contraseña</string>
    <string name="BtnLogin">Ingresar</string>

    <string name="MiPuntuaciontxt">Mi puntuación</string>
    <string name="Patos"> --- </string>
    <string name="uid"> --- </string>
    <string name="correo"> --- </string>
    <string name="nombre"> --- </string>
    <string name="fecha"> --- </string>
    <string name="Menutxt">Menú</string>

    <string name="JugarBtn">JUGAR</string>
    <string name="PuntuacionesBtn">Puntuaciones</string>
    <string name="AcercaDeBtn">Acerda de</string>
    <string name="CerrarSesion">Cerrar sesion</string>

    <!--ESCENARIO-->
    <string name="TvContador"> 0 </string>
    <string name="TvNombre"> ---- </string>
    <string name="TvTiempo"> 0S </string>

    <!--PANTALLA-->
    <string name="AnchoTv"> ---- </string>
    <string name="AltoTv"> ---- </string>

    <!--GameOver-->
    <string name="SeacaboTXT">Se acabo el tiempo</string>
    <string name="HasmatadoTXT">Has matado</string>
    <string name="NumeroTXT"> -- </string>
    <string name="JUGARDENUEVO">Jugar de nuevo</string>
    <string name="IRMENU">MENU</string>
    <string name="Puntajes">Ver puntajes</string> <!--Este lo veo de mas no creo ponerlo-->

</resources>