<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center">

        <!-- Texto Mi Puntuación -->

        <TextView
            android:id="@+id/MiPuntuaciontxt"
            android:text="@string/MiPuntuaciontxt"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" /> <!-- Centrar el texto -->

        <!-- Texto Patos -->
        <TextView
            android:id="@+id/Patos"
            android:text="@string/Patos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" /> <!-- Centrar el texto -->

        <!-- Imagen -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagen"
            android:src="@drawable/patos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" /> <!-- Corregido -->

        <!-- Texto UID -->
        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <!-- Texto Correo -->
        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <!-- Texto Nombre -->
        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <!-- Texto Menú -->
        <TextView
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <!-- Botón Jugar -->
        <Button
            android:id="@+id/JugarBtn"
            android:text="@string/JugarBtn"
            android:textSize="20dp"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Botón Puntuaciones -->

        <Button
            android:id="@+id/PuntuacionesBtn"
            android:text="@string/PuntuacionesBtn"
            android:textSize="20dp"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Botón Acerca de -->

        <Button
            android:id="@+id/AcercaDeBtn"
            android:text="@string/AcercaDeBtn"
            android:textSize="20dp"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Botón Cerrar Sesión -->
        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:textSize="20dp"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>


