<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="10dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoLogin"
                android:hint="@string/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passLogin"
                android:hint="@string/passLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BtnLogin"
            android:text="@string/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#086A87"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</RelativeLayout>